fix message overflow-x

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -108,12 +108,17 @@ body {
 }
 
 .field {
-  margin-bottom:10px;
+  margin-bottom:10px; 
 }
 
 .field span {
   margin-left : 20px;
   font-weight:bold;
+}
+
+.field div {
+  overflow-x: scroll;
+  width: 400px;
 }
 
 .field input {
